--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@sendgrid/mail": "^7.4.4",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.5",
     "eslint": "^7.7.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.9.0",
